--- a/front-web/src/app.scss
+++ b/front-web/src/app.scss
@@ -35,3 +35,23 @@ a {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
+
+.margin-bottom-30{
+  margin-bottom: 30px;
+}
+
+.input-base{
+  height: 50px;
+  border: 1px solid #E1E1E1;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: -0.015em;
+  color: #263238;
+
+  &::placeholder{
+    color: #9E9E9E;
+
+  }
+}
