--- a/front-web/src/core/components/Navbar/styles.scss
+++ b/front-web/src/core/components/Navbar/styles.scss
@@ -3,6 +3,7 @@
     color: #ffffff;
     align-items: center;
     padding-left: 40px;
+    padding-right: 40px;
     margin-left: 0px;
     margin-right: 0px;
 }
@@ -13,18 +14,23 @@
 
 .main-menu{
     display: flex;
+    justify-content: center;
+    
+    li:nth-child(2){
+        margin-right: 85px;
+        margin-left: 85px;
+    }
+}
+
+.nav-link {
     font-size: 18px;
-    width: 380px;
-    justify-content: space-between;
-    a {
-        font-style: normal;
-        color: rgba(255, 255, 255, 0.5);
-        &.active{
-            font-weight: bold;
-            color: #ffffff
-        }
-        &:hover{
-            color: #ffffff;
-        }
+    font-style: normal;
+    color: rgba(255, 255, 255, 0.5);
+    &.active{
+        font-weight: bold;
+        color: #ffffff
+    }
+    &:hover{
+        color: #ffffff;
     }
 }
