Add product filters

--- a/front-web/src/pages/Admin/Products/Form/styles.scss
+++ b/front-web/src/pages/Admin/Products/Form/styles.scss
@@ -1,7 +1,7 @@
 .categories-select__control {
     height: 50px;
-    border-radius: 10px impor !important;
-    border: 1px solid #e1e1e1 I !important;
+    border-radius: 10px !important;
+    border: 1px solid #e1e1e1;
     font-size: 18px;
 }
 
@@ -10,5 +10,5 @@
 }
 
 .categories-select__placeholder{
-    color: #9e9e9e !important;
+    color: #9e9e9e;
 }
