--- a/front-web/src/pages/Admin/components/BaseForm/styles.scss
+++ b/front-web/src/pages/Admin/components/BaseForm/styles.scss
@@ -17,3 +17,17 @@
     margin-top: 70px;
     text-align: right;
 }
+
+//tablet breakpoints
+@media (max-width: 768px){
+    .admin-base-form {
+        width: 100%;
+    }
+}
+//mobile breakpoints
+@media (max-width: 576px){
+    .admin-base-form {
+        width: 100%;
+        flex-direction: column;
+    }
+}
