--- a/front-web/src/core/components/Navbar/styles.scss
+++ b/front-web/src/core/components/Navbar/styles.scss
@@ -1,25 +1,37 @@
 .main-nav{
+    width: 100% !important;
+    display: flex;
+    flex-wrap: nowrap;
     height: 70px;
     color: #ffffff;
     align-items: center;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-left: 0px;
-    margin-right: 0px;
+    padding: 0px 40px;
+    margin: 0px;
 }
 
 .nav-logo-text{
+    width: 30%;
     color: #ffffff;
 }
 
-.main-menu{
+.menu-mobile-container{
+    display: none;
+}
+
+.menu-container {
+    width: 55%;
     display: flex;
+    flex: 1;
     justify-content: center;
-    
-    li:nth-child(2){
-        margin-right: 85px;
-        margin-left: 85px;
-    }
+    flex-wrap: nowrap;
+}
+
+.main-menu{
+    max-width: 300px;
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .nav-link {
@@ -32,5 +44,62 @@
     }
     &:hover{
         color: #ffffff;
+    }
+}
+
+//tablet breakpoints
+@media (max-width: 768px){
+    .menu-container {
+        justify-content: flex-end;
+    }
+}
+//mobile breakpoints
+@media (max-width: 576px){
+    .main-nav {
+        width: 100% !important;
+        justify-content: space-between;
+    }
+
+    .menu-container, .user-info-dnone{
+        display: none;
+    }
+
+    .nav-logo-text{
+        width: 50%;
+        margin-left: 15px;
+    }
+
+    .menu-mobile-btn {
+        display: block;
+        border: none;
+        background: transparent;
+        width: 30px;
+        outline: none;
+    }
+
+    .menu-mobile-container{
+        width: 100%;
+        top: 70px;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        background: #407bff;
+        position: absolute;
+        z-index: 10;
+    }
+
+    .menu-mobile-container ul{
+        height: 150px;
+        display: flex;
+        align-items: flex-start;
+        flex: 1;
+        flex-direction: column;
+        top: 40px;
+    }
+
+    .menu-mobile-container li{
+        width: 96vw;
+        margin: 5px 0px;
     }
 }
