--- a/front-web/src/core/components/ProductFilters/styles.scss
+++ b/front-web/src/core/components/ProductFilters/styles.scss
@@ -44,3 +44,25 @@
         color: #9e9e9e;
     }
 }
+
+//tablet breakpoints
+@media (max-width: 768px){
+    .product-filters-container {
+        width: 100%;
+    }
+}
+//mobile breakpoints
+@media (max-width: 576px){
+    .product-filters-container {
+        width: 100%;
+        height: 200px;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 20px;
+    }
+
+    .filter-select-container{
+        width: 100%;
+        margin: 10px 0px;
+    }
+}
