--- a/front-web/src/pages/Admin/Products/ImageUpload/styles.scss
+++ b/front-web/src/pages/Admin/Products/ImageUpload/styles.scss
@@ -1,3 +1,8 @@
+.upload-container{
+    display: flex;
+    flex-direction: column;
+}
+
 .upload-button-container {
     label {
         background: #9e9e9e;
@@ -40,5 +45,43 @@
     .uploaded-image {
         width: 200px;
         height: 200px;
+    }
+}
+
+
+//tablet breakpoints
+@media (max-width: 768px){
+    .upload-button-container label {
+        word-wrap: none;
+        width: 200px;
+    }
+}
+//mobile breakpoints
+@media (max-width: 576px){
+    .upload-container{
+        .upload-text-helper{
+            display: none;
+        }
+        
+        .upload-button-container label {
+            width: 250px;
+        }
+
+        .upload-placeholder{
+            width: 100vw !important;
+            margin-left: 40px;
+
+            .uploaded-image {
+                align-self: center;
+            }
+        
+            .upload-progress {
+                margin-left: 20px;
+            }
+
+            .upload-progress-container {
+                margin-left: 20px;
+            }
+        }
     }
 }
