--- a/front-web/src/pages/Auth/styles.scss
+++ b/front-web/src/pages/Auth/styles.scss
@@ -2,7 +2,7 @@
     display: flex;
     padding: 40px 40px 100px 0;
     justify-content: center;
-    background: url(~core/assets/images/auth-background.svg) no-repeat;
+    background: url(~core/assets/images/auth-background.svg) no-repeat bottom;
     background-size: 100%;
 }
 
@@ -21,4 +21,19 @@
     line-height: 33px;
     letter-spacing: -0.015em;
     color: #9E9E9E;
+}
+
+
+//tablet breakpoints
+@media (max-width: 768px){
+    .auth-info {
+        display: none;
+    }
+}
+//mobile breakpoints
+@media (max-width: 576px){
+    .auth-container {
+        margin: 0 auto;
+        padding: 40px 0px 0px 0px;
+    }
 }
