--- a/front-web/src/pages/Home/styles.scss
+++ b/front-web/src/pages/Home/styles.scss
@@ -1,14 +1,12 @@
 .home-container{
-    margin-top: 40px;
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-bottom: 40px;
+    padding: 0 40px;
+    margin: 40px 0px;
 }
 
 .home-content{
-    padding-top: 155px;
-    padding-left: 100px;
-    padding-bottom: 150px;;
+    padding: 155px 0px 150px 100px;
+    display: flex;
+    flex-direction: row;
 }
 
 .text-title{
@@ -28,4 +26,75 @@
 
 .main-image{
     width: 100%;
+}
+
+.start-search-button {
+
+}
+
+//tablet breakpoints
+@media (max-width: 768px){
+    .home-content {
+        width: 100%;
+        flex-direction: column-reverse;
+        align-items: center;
+        padding: 0px 20px 50px 20px;
+    }
+
+    .main-image{
+        width: 350px;
+        margin: 0px 0px -20px -60px;
+    }
+
+    .home-text{
+        width: 100%;
+        height: 100px;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        flex: 1;
+    }
+
+    .text-title{
+        font-size: 2.5em;
+        text-align: center;
+        margin: 40px 0px;
+        letter-spacing: 0;
+        line-height: 50px;
+    }
+
+    .text-subtitle{
+        font-size: 1.2em;
+        text-align: center;
+        font-weight: 400;
+        margin: 40px 0px;
+    }
+}
+//mobile breakpoints
+@media (max-width: 576px){
+    .home-content {
+        flex-direction: column-reverse;
+        padding: 0px;
+    }
+
+    .main-image{
+        width: 70vw !important;
+        margin: -100px 0px -80px -80px;
+    }
+
+    .text-title{
+        font-size: 1.5rem;
+        text-align: center;
+        letter-spacing: 0;
+        line-height: 30px;
+    }
+
+    .text-subtitle{
+        font-size: 0.7em;
+        text-align: center;
+        font-weight: 400;
+        margin: 40px 0px;
+    }
 }
