--- a/front-web/src/pages/Admin/Products/Form/styles.scss
+++ b/front-web/src/pages/Admin/Products/Form/styles.scss
@@ -18,6 +18,29 @@
     color: #9e9e9e;
 }
 
+.editor-container {
+    padding: 20px;
+    border: 1px solid #E1E1E1;
+    border-radius: 10px !important;
+    font-size: 18px;
+    line-height: 25px;
+    letter-spacing: -0.015em;
+    color: #263238;
+    height: 300px !important;
+  }
+  
+  .toolbar-container {
+    border: 1px solid #E1E1E1 !important;
+    border-radius: 10px !important;
+    justify-content: center !important;
+  }
+  
+  .custom-icon {
+    width: 44px;
+    height: 44px !important;
+    border-radius: 10px !important;
+  }
+  
 //tablet breakpoints
 @media (max-width: 768px){
 }
